# backbone_ros

./: .gitignore  README.md  backbone.launch
src/backbone/: CMakeLists.txt  main.cpp  package.xml
src/backbone/config/: gaussian_person_ssd_ncs.yaml
src/backbone/include/: SSD_Detector.hpp
src/backbone/msg/: BoundingBox.msg
src/backbone/src/: SSD_Detector.cpp
