<?xml version="1.0"?>
<package>
  <name>backbone</name>
  <version>1.0.0</version>
  <description>detection and segmentation backbone </description>
  object detection and road semantic segmentation with camera sensor.

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/backbone</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author>Pesong</author>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pesong@todo.todo">pesong</maintainer>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>

  <build_depend>map_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>costmap_2d</build_depend>




  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <!-- <run_depend package="camera1394"/> -->
  <!--  <depend package="common_rosdeps"/> -->
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <!--  <depend package="pcl_ros"/> -->
  <!--  <depend package="pcl_conversions"/> -->
  <run_depend>pluginlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>

  <run_depend>map_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>costmap_2d</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
